syntax = "proto3";

package cc.bbq.xq;

java_package = "cc.bbq.xq.data.proto";
option java_multiple_files = true;

message UserCredentials {
  string username = 1;
  string password = 2;
  string token = 3;
  int64 userId = 4;
  string deviceId = 5;
}